// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should match baseline snapshot as A button 1`] = `
<a
  class="kSuvgA koXDKo"
  href="http://google.com"
>
  <h1>
    Test
  </h1>
</a>
`;

exports[`<Button /> should match baseline snapshot as Button button 1`] = `
<button
  class="kSuvgA"
  type="button"
>
  <h1>
    Test
  </h1>
</button>
`;

exports[`<Button /> should match baseline snapshot as Link button 1`] = `
<a
  class="kSuvgA koXDKo"
>
  <h1>
    Test
  </h1>
</a>
`;
